cli/tests/unstable_disabled.out
[WILDCARD]
error: TS2339 [ERROR]: Property 'loadavg' does not exist on type 'typeof Deno'.
console.log(Deno.loadavg);
                 ~~~~~~~
    at [WILDCARD]/cli/tests/unstable.ts:1:18
